# deadletter

./: .env.example  .gitignore  Dockerfile  EXECUTION_PLAN.md  QUEST_REFERENCE.md  README.md  cli.py  docker-compose.observability.yml  docker-compose.yml  migrate.py  pyproject.toml  run.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
app/: __init__.py  alerting.py  database.py  errors.py  logging_config.py  request_parsing.py  validators.py
app/models/: __init__.py  event.py  url.py  user.py
app/routes/: __init__.py  events.py  health.py  metrics.py  urls.py  users.py
docs/: api.md  architecture.md  capacity.md  decisions.md  deploy.md  failure-modes.md  runbook.md
observability/grafana/dashboards/: deadletter.json
observability/grafana/provisioning/dashboards/: dashboard.yml
observability/prometheus/: prometheus.yml
tests/: conftest.py
tests/integration/: test_routes_misc.py  test_urls.py
tests/unit/: test_validators.py
